# tree-sitter-openapi

./: .gitignore  Cargo.toml  README.md  go.mod  package.json  pyproject.toml  setup.py
.github/workflows/: auto-tag.yml  ci.yml  publish.yml
bindings/go/openapi/: binding.go  binding_test.go
bindings/go/openapi_json/: binding_test.go
bindings/node/: binding_test.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_openapi/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
examples/: parse-openapi-repo.js
tree-sitter-openapi-json/queries/: highlights.scm
tree-sitter-openapi-json/test/corpus/: json_arazzo_basic.txt  json_fragment_path_item.txt  json_fragment_schema.txt  json_versions.txt
tree-sitter-openapi/queries/: highlights.scm
tree-sitter-openapi/test/corpus/: yaml_arazzo_basic.txt  yaml_fragment_parameter.txt  yaml_fragment_path_item.txt  yaml_fragment_response.txt  yaml_fragment_schema.txt  yaml_versions.txt
