[package]
name = "tree-sitter-openapi"
version = "0.1.0"
edition = "2021"
description = "OpenAPI grammar for tree-sitter (YAML and JSON)"
license = "MIT"
repository = "https://github.com/tree-sitter-openapi/tree-sitter-openapi"

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.22"

[build-dependencies]
cc = "1.0"
