[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-openapi"
description = "OpenAPI grammar for tree-sitter (YAML and JSON)"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "openapi", "yaml", "json"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
requires-python = ">=3.10"
license = { text = "MIT" }
readme = "README.md"

[project.urls]
Homepage = "https://github.com/tree-sitter-openapi/tree-sitter-openapi"

[project.optional-dependencies]
core = ["tree-sitter>=0.20"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
